--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <!-- Footer -->
   <footer class="text-center text-xs text-gray-500 py-6 bg-black">
-    © 2025 SALSASAUS PRODUCTIONS.
+    © 2025 SALSASAUS PRODUCTIONS | MARIGOLD CINEMAS TM.
   </footer>
 </body>
 </html>
