--- a/chaos.html
+++ b/chaos.html
@@ -10,102 +10,31 @@
 
     body {
       font-family: 'Share Tech Mono', monospace;
-      background-color: #05080a;
-      color: #c0f6f9;
-      overflow-x: hidden;
+      background: linear-gradient(135deg, #1e0a1a, #3d0b0b);
+      color: #fbbf24;
       min-height: 100vh;
       margin: 0;
-      padding-bottom: 3rem;
+      position: relative;
+      overflow-x: hidden;
     }
 
-    /* Flickering neon glow animation */
-    @keyframes flicker {
-      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
-        text-shadow:
-          0 0 6px #00fff7,
-          0 0 15px #00fff7,
-          0 0 20px #19f6e8,
-          0 0 30px #00fff7;
-        opacity: 1;
-      }
-      20%, 22%, 24%, 55% {
-        text-shadow: none;
-        opacity: 0.8;
-      }
-    }
-
-    /* Glitch effect */
-    @keyframes glitch {
-      0% {
-        clip-path: inset(0 0 0 0);
-        transform: translate(0);
-      }
-      20% {
-        clip-path: inset(10% 0 85% 0);
-        transform: translate(-2px, -2px);
-      }
-      40% {
-        clip-path: inset(85% 0 10% 0);
-        transform: translate(2px, 2px);
-      }
-      60% {
-        clip-path: inset(10% 0 85% 0);
-        transform: translate(-2px, 2px);
-      }
-      80% {
-        clip-path: inset(85% 0 10% 0);
-        transform: translate(2px, -2px);
-      }
-      100% {
-        clip-path: inset(0 0 0 0);
-        transform: translate(0);
-      }
+    @keyframes sparkleFloat {
+      0%, 100% { opacity: 0; transform: translateY(0) scale(0.8); }
+      50% { opacity: 1; transform: translateY(-10px) scale(1.1); }
     }
 
     .header-bar {
-      background-color: #0d2e2f;
-      border-left: 8px solid #00fff7;
+      background: linear-gradient(90deg, #f59e0b, #db2777);
+      border-left: 8px solid #f43f5e;
       padding: 1rem 2rem;
       margin-bottom: 2rem;
       font-size: 2rem;
       font-weight: 900;
-      box-shadow:
-        0 0 16px #00fff7,
-        inset 0 0 25px #19f6e8;
-      color: #80ffff;
+      box-shadow: 0 0 15px #f59e0b, inset 0 0 20px #db2777;
+      color: #ffe4e6;
+      text-shadow: 0 0 10px #f43f5e, 0 0 20px #f59e0b;
       position: relative;
       user-select: none;
-      animation: flicker 3s infinite alternate;
-      letter-spacing: 0.06em;
-      font-family: 'Share Tech Mono', monospace;
-      text-transform: uppercase;
-      text-shadow:
-        0 0 10px #00fff7,
-        0 0 20px #19f6e8;
-    }
-    .header-bar::before,
-    .header-bar::after {
-      content: attr(data-text);
-      position: absolute;
-      top: 0;
-      left: 2rem;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      color: #00fff7;
-      background: transparent;
-      clip-path: inset(0);
-      opacity: 0.6;
-      animation: glitch 2.5s infinite;
-      user-select: none;
-      pointer-events: none;
-      font-family: 'Share Tech Mono', monospace;
-      text-transform: uppercase;
-    }
-    .header-bar::after {
-      left: 2.05rem;
-      color: #80ffff;
-      animation-delay: 1.25s;
     }
 
     main {
@@ -115,101 +44,87 @@
     }
 
     section.trial {
-      background-color: #073537;
+      background: linear-gradient(145deg, #3f0e1a, #7c1d1d);
       padding: 1rem 1.5rem;
-      border-left: 6px solid #00fff7;
+      border-left: 6px solid #f43f5e;
       margin-bottom: 2rem;
       border-radius: 0.5rem;
-      box-shadow:
-        0 0 15px #00fff7;
-      transition: box-shadow 0.3s ease, transform 0.3s ease;
+      box-shadow: 0 0 12px #f43f5e;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
       cursor: default;
       user-select: none;
+      color: #fcd34d;
       position: relative;
-      color: #a3ffff;
-      text-shadow: 0 0 3px #00fff7;
     }
+
     section.trial:hover {
-      box-shadow:
-        0 0 30px #19f6e8,
-        0 0 40px #00fff7;
-      transform: translateY(-3px);
+      transform: scale(1.03);
+      box-shadow: 0 0 25px #f59e0b, 0 0 40px #db2777;
     }
 
     .trial-title {
       font-size: 1.75rem;
-      font-weight: 800;
-      margin-bottom: 0.25rem;
-      color: #00fff7;
-      text-shadow:
-        0 0 15px #00fff7,
-        0 0 30px #19f6e8;
-      animation: flicker 2.5s infinite alternate;
+      font-weight: 900;
+      margin-bottom: 0.3rem;
+      color: #fda4af;
+      text-shadow: 0 0 10px #f43f5e;
     }
+
     .trial-subtitle {
       font-weight: 600;
-      margin-bottom: 0.75rem;
+      margin-bottom: 0.8rem;
       font-style: italic;
-      color: #7efcff;
-      text-shadow: 0 0 5px #00fff7;
+      color: #fdba74;
     }
-    .trial-info p, .trial-info ul {
-      margin-bottom: 0.5rem;
+
+    .trial-info p {
+      margin-bottom: 0.6rem;
       line-height: 1.5;
-      color: #c0f6f9;
+      color: #ffe4e6;
+      text-shadow: 0 0 3px #7c2d12;
     }
+
     .trial-info ul {
       list-style-type: disc;
       margin-left: 1.5rem;
     }
-    .trial-images {
-      margin-top: 1rem;
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-    .trial-images img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 0.75rem;
-      box-shadow: 0 0 20px #00fff7;
-      flex: 1 1 250px;
-      user-select: none;
-    }
 
-    /* Subtle random flicker sparkle effect */
-    @keyframes sparkle {
-      0%, 100% { opacity: 0; transform: scale(0.8); }
-      50% { opacity: 1; transform: scale(1.2); }
-    }
     .sparkle {
       position: absolute;
       width: 6px;
       height: 6px;
-      background: #00fff7;
+      background: #f43f5e;
       border-radius: 50%;
-      box-shadow:
-        0 0 8px #19f6e8;
-      animation: sparkle 3s infinite ease-in-out;
+      box-shadow: 0 0 12px #fb7185;
+      animation: sparkleFloat 5s infinite ease-in-out;
       pointer-events: none;
+      opacity: 0;
+      mix-blend-mode: screen;
+    }
+
+    .sparkle.orange {
+      background: #f59e0b;
+      box-shadow: 0 0 15px #fcd34d;
     }
   </style>
 </head>
-<body class="text-white">
+<body>
 
-  <header class="header-bar" data-text="Chaos – Unpredictability, Survival">
-     Chaos – Unpredictability, Survival
+  <!-- Sparkles -->
+  <span class="sparkle" style="top: 20vh; left: 30vw; animation-delay: 0s;"></span>
+  <span class="sparkle orange" style="top: 40vh; left: 65vw; animation-delay: 2s;"></span>
+  <span class="sparkle" style="top: 60vh; left: 45vw; animation-delay: 4s;"></span>
+  <span class="sparkle orange" style="top: 80vh; left: 25vw; animation-delay: 3s;"></span>
+
+  <header class="header-bar">
+    Chaos – Unpredictability, Survival
   </header>
 
   <main>
-    <p>
-      Chaos trials throw ever-changing rules and random challenges, testing adaptability and survival instincts.
-    </p>
-
-    <section class="trial" style="position:relative;">
+    <section class="trial">
       <h2 class="trial-title">"Randomizer"</h2>
+      <div class="trial-subtitle">Solo challenge</div>
       <div class="trial-info">
-        <p><strong>Type:</strong> Solo / Teams</p>
         <p>Every 30 seconds, a rule changes:</p>
         <ul>
           <li>Inverted controls</li>
@@ -219,16 +134,14 @@
         </ul>
         <p>Survive 3 rounds of chaos.</p>
       </div>
-      <div class="trial-images"></div>
-      <span class="sparkle" style="top:10px; left:20px; animation-delay: 0s;"></span>
-      <span class="sparkle" style="top:50px; left:180px; animation-delay: 1.5s;"></span>
-      <span class="sparkle" style="top:80px; left:130px; animation-delay: 2.5s;"></span>
+      <span class="sparkle" style="top:12px; left:40px;"></span>
+      <span class="sparkle orange" style="top:70px; left:180px;"></span>
     </section>
 
-    <section class="trial" style="position:relative;">
+    <section class="trial">
       <h2 class="trial-title">"Snake Eyes"</h2>
+      <div class="trial-subtitle">Pair challenge</div>
       <div class="trial-info">
-        <p><strong>Type:</strong> Solo Player</p>
         <p>Roll a dice. Complete a challenge based on the number:</p>
         <ul>
           <li>1: Solve a puzzle blind</li>
@@ -236,21 +149,19 @@
           <li>Randomized tasks tied to dice outcomes</li>
         </ul>
       </div>
-      <div class="trial-images"></div>
-      <span class="sparkle" style="top:15px; left:30px; animation-delay: 0.8s;"></span>
-      <span class="sparkle" style="top:60px; left:140px; animation-delay: 2s;"></span>
+      <span class="sparkle" style="top:18px; left:30px;"></span>
+      <span class="sparkle orange" style="top:60px; left:160px;"></span>
     </section>
 
-    <section class="trial" style="position:relative;">
+    <section class="trial">
       <h2 class="trial-title">"Spin Room"</h2>
+      <div class="trial-subtitle">Team vs Team</div>
       <div class="trial-info">
-        <p><strong>Type:</strong> Teams</p>
         <p>Circular spinning platform with platforms, spikes, and projectiles.</p>
-        <p>Direction changes every 10 seconds.</p>
+        <p>Direction changes every 10 seconds. Knock out the other team.</p>
       </div>
-      <div class="trial-images"></div>
-      <span class="sparkle" style="top:10px; left:10px; animation-delay: 1.2s;"></span>
-      <span class="sparkle" style="top:40px; left:160px; animation-delay: 2.7s;"></span>
+      <span class="sparkle" style="top:10px; left:20px;"></span>
+      <span class="sparkle orange" style="top:40px; left:140px;"></span>
     </section>
   </main>
 
