--- a/index.html
+++ b/index.html
@@ -104,6 +104,40 @@
     </div>
   </section>
 
+  <!-- Final Trial: SNAKEPIT -->
+<!-- Final Trial: SNAKEPIT -->
+<section id="final" class="px-4 py-14 bg-black text-yellow-300 relative">
+  <h2 class="text-4xl font-bold text-center mb-6" style="
+    text-shadow:
+      0 0 8px #ffd700,
+      0 0 12px #ffaa00,
+      0 0 20px #ffc107;
+    font-family: 'Orbitron', monospace;
+  ">
+     FINAL TRIAL : SNAKEPIT
+  </h2>
+  <div class="max-w-3xl mx-auto bg-gradient-to-br from-yellow-900 via-yellow-800 to-yellow-700 rounded-xl p-6 border-4 border-yellow-500 shadow-2xl" style="
+    box-shadow:
+      0 0 15px #ffc107,
+      0 0 25px #ffcc00;
+  ">
+    <p class="text-lg font-semibold mb-4">Snakepit</p>
+    <ul class="list-disc list-inside space-y-2 text-yellow-100 text-sm leading-relaxed">
+    <p><strong>Up to 8 players</strong> can qualify for the Snakepit  no more. Anyone above that gets eliminated by voting before the final trial begins.</p>
+
+    <p>The Snakepit is a brutal <strong>1v1 deathmatch-style arena</strong>, where two players are chosen to face off at a time. The arena consists of <strong>floating, hexagon-shaped tiles</strong>, each one rigged to open or close at random.</p>
+
+    <p>Each tile hides <em>the deadliest snakes in the world</em>  though you’ll never see them directly. Fall into an open tile and you’re considered “bitten”… and eliminated.</p>
+
+    <p><strong>Your objective:</strong> shove your opponent into an open tile before they do the same to you.</p>
+
+    <p>As rounds progress, the arena shrinks, forcing tighter and faster duels  until only <strong>two finalists</strong> remain for the final showdown.</p>
+
+  </div>
+</section>
+
+
+
   <!-- Snakebite Cards -->
   <section id="cards" class="px-4 py-10 bg-black text-gray-300">
     <h2 class="text-3xl glitch font-bold mb-6">Snakebite Cards</h2>
