--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <title>SNAKEPIT: Multiplayer Survival Game</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@500&display=swap" rel="stylesheet" />
+  <!-- Basic SEO -->
+   <link rel="icon" href="favicon.ico" type="image/x-icon" />
+
+<meta name="description" content="snakepit" />
+
+<!-- Open Graph (Facebook, LinkedIn, Discord) -->
+<meta property="og:title" content="Snakepit" />
+<meta property="og:description" content="only one stands tall" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://lucydotjson.github.io/snakepit-concept-site/" />
+<meta property="og:image" content="https://lucydotjson.github.io/snakepit-concept-site/share-image.png" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Snakepit" />
+<meta name="twitter:description" content="only one stands tall." />
+<meta name="twitter:image" content="https://lucydotjson.github.io/snakepit-concept-site/share-image.png" />
   <style>
     body { padding-top: 4rem; }
     .glitch {
@@ -35,6 +52,8 @@
       transform: translateY(-4px);
     }
   </style>
+
+  
 </head>
 
 <body>
